Moved spin.js to /libs, updated REAMDE

--- a/test/jquery.spin.html
+++ b/test/jquery.spin.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
   <script src="../libs/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
-  <script src="../src/spin.js"></script>
+  <script src="../libs/spin/spin.js"></script>
   <script src="../src/jquery.spin.js"></script>
   <script src="jquery.spin_test.js"></script>
   <!-- Removing access to jQuery and $. But it'll still be available as _$, if
