--- a/test/jquery.spin.amd.html
+++ b/test/jquery.spin.amd.html
@@ -3,19 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>jQuery Spin Test Suite</title>
-  <!-- Load local jQuery. This can be overridden with a ?jquery=___ param. -->
-  <script src="../libs/jquery-loader.js"></script>
   <!-- Load local QUnit. -->
   <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
   <script src="../libs/qunit/qunit.js"></script>
-  <!-- Load local lib and tests. -->
-  <script src="../libs/spin/spin.js"></script>
-  <script src="../src/jquery.spin.js"></script>
-  <script src="jquery.spin_test.js"></script>
-  <!-- Removing access to jQuery and $. But it'll still be available as _$, if
-       you REALLY want to mess around with jQuery in the console. REMEMBER WE
-       ARE TESTING A PLUGIN HERE, THIS HELPS ENSURE BEST PRACTICES. REALLY. -->
-  <script>window._$ = jQuery.noConflict(true);</script>
 
 </head>
 <body>
@@ -31,5 +21,6 @@
           Whatever blog deep v, mlkshk 8-bit you probably haven't heard of them forage put a bird on it photo booth fap gentrify. Carles artisan pop-up, freegan fixie wayfarers tofu terry richardson post-ironic meh polaroid skateboard stumptown. Jean shorts aesthetic pitchfork single-origin coffee. Brooklyn authentic chillwave salvia fashion axe locavore, truffaut literally shoreditch disrupt polaroid semiotics squid gentrify vice. Quinoa 8-bit readymade, +1 plaid beard cliche hella tattooed authentic polaroid flannel PBR cardigan. Irony marfa aesthetic williamsburg narwhal brunch. Chillwave hella photo booth irony jean shorts next level blue bottle, terry richardson fanny pack messenger bag literally.
       </div>
   </div>
+    <script src="../libs/requirejs/require.js" data-main="jquery.spin_amd_test"></script>
 </body>
 </html>
