--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h3>spin.jquery.js</h3>
 
         <div class="spinDemo one" style="margin-left: 200px;">
-            Whatever blog deep v, mlkshk 8-bit you probably haven't heard of them forage put a bird on it photo booth fap gentrify. Carles artisan pop-up, freegan fixie wayfarers tofu terry richardson post-ironic meh polaroid skateboard stumptown. Jean shorts aesthetic pitchfork single-origin coffee. Brooklyn authentic chillwave salvia fashion axe locavore,
+            <span>Whatever blog deep v, mlkshk 8-bit you probably haven't heard of them forage put a bird on it photo booth fap gentrify. Carles artisan pop-up, freegan fixie wayfarers tofu terry richardson post-ironic meh polaroid skateboard stumptown. Jean shorts aesthetic pitchfork single-origin coffee. Brooklyn authentic chillwave salvia fashion axe locavore,</span>
         </div>
 
         <p>
